--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/rules": "^3.0@alpha",
         "drupal/rules_role_email": "^1.0@alpha",
         "drupal/single_datetime": "^1.6",
+        "drupal/twig_field_value": "^1.1",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_geojson": "1.x-dev",
