--- a/config/sync/core.entity_view_display.node.event.full.yml
+++ b/config/sync/core.entity_view_display.node.event.full.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.event.field_inscription
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
+    - field.field.node.event.field_ville
     - node.type.event
   module:
     - datetime
@@ -50,15 +51,11 @@ third_party_settings:
         - field_image
         - body
       right:
-        - field_link_info_go
         - field_date
         - field_address
         - field_document
         - field_place
-        - field_retour_liste
       footer:
-        - field_bloc_incitation
-        - field_bloc
         - field_argumentaires
         - field_inscription
     fields:
@@ -85,7 +82,7 @@ content:
     third_party_settings: {  }
     region: left
   field_address:
-    weight: 6
+    weight: 5
     label: inline
     settings: {  }
     third_party_settings: {  }
@@ -93,14 +90,14 @@ content:
     region: right
   field_argumentaires:
     type: entity_reference_label
-    weight: 12
+    weight: 8
     region: footer
     label: hidden
     settings:
       link: true
     third_party_settings: {  }
   field_date:
-    weight: 5
+    weight: 4
     label: inline
     settings:
       timezone_override: ''
@@ -112,7 +109,7 @@ content:
     region: right
   field_document:
     type: entity_reference_label
-    weight: 7
+    weight: 6
     region: right
     label: above
     settings:
@@ -137,7 +134,7 @@ content:
     third_party_settings: {  }
   field_inscription:
     type: webform_entity_reference_entity_view
-    weight: 13
+    weight: 9
     region: footer
     label: hidden
     settings:
@@ -145,7 +142,7 @@ content:
     third_party_settings: {  }
   field_place:
     type: geofield_google_map
-    weight: 8
+    weight: 7
     region: right
     label: hidden
     settings:
@@ -215,5 +212,6 @@ hidden:
   content_moderation_control: true
   field_home_slideshow: true
   field_release_date: true
+  field_ville: true
   langcode: true
   links: true
