--- a/config/sync/core.entity_view_mode.node.full.yml
+++ b/config/sync/core.entity_view_mode.node.full.yml
@@ -7,6 +7,6 @@ dependencies:
 _core:
   default_config_hash: ElrtInxGjZd7GaapJ5O9n-ugi2hG2IxFivtgn0tHOsk
 id: node.full
-label: 'Full content'
+label: 'Large paysage (1200x737)'
 targetEntityType: node
 cache: true
