Config export to manage acces and use of media and taxonomy.

--- a/config/sync/core.entity_form_display.media.audio.default.yml
+++ b/config/sync/core.entity_form_display.media.audio.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.audio.field_media_audio_file
+    - field.field.media.audio.field_tag_media
     - media.type.audio
   module:
     - file
@@ -27,6 +28,12 @@ content:
       progress_indicator: throbber
     third_party_settings: {  }
     type: file_generic
+    region: content
+  field_tag_media:
+    weight: 102
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
     region: content
   langcode:
     type: language_select
