--- a/config/sync/user.role.contributor.yml
+++ b/config/sync/user.role.contributor.yml
@@ -19,6 +19,7 @@ permissions:
   - 'access in-place editing'
   - 'access media overview'
   - 'access own edition workflow_transion overview'
+  - 'access taxonomy overview'
   - 'access toolbar'
   - 'access workbench'
   - 'administer nodes'
@@ -31,6 +32,7 @@ permissions:
   - 'create media'
   - 'create page content'
   - 'create terms in tag_media'
+  - 'create terms in tags'
   - 'create video_embed media'
   - 'delete article revisions'
   - 'delete media'
