--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -21,6 +21,7 @@ permissions:
   - 'access in-place editing'
   - 'access media overview'
   - 'access own edition workflow_transion overview'
+  - 'access taxonomy overview'
   - 'access toolbar'
   - 'access workbench'
   - 'administer nodes'
@@ -48,6 +49,7 @@ permissions:
   - 'delete own image media'
   - 'delete own video_embed media'
   - 'delete terms in tag_media'
+  - 'delete terms in tags'
   - 'edit any audio media'
   - 'edit any event content'
   - 'edit any file media'
@@ -61,6 +63,7 @@ permissions:
   - 'edit own video_embed media'
   - 'edit terms in event_type'
   - 'edit terms in tag_media'
+  - 'edit terms in tags'
   - 'execute php code'
   - 'revert article revisions'
   - 'switch users'
