--- a/config/sync/core.entity_form_display.media.file.default.yml
+++ b/config/sync/core.entity_form_display.media.file.default.yml
@@ -31,12 +31,9 @@ content:
     region: content
   field_tag_media:
     weight: 101
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_buttons
     region: content
   langcode:
     type: language_select
