--- a/config/sync/core.entity_form_display.media.video_embed.default.yml
+++ b/config/sync/core.entity_form_display.media.video_embed.default.yml
@@ -28,12 +28,9 @@ content:
     region: content
   field_tag_media:
     weight: 2
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete_tags
+    type: options_buttons
     region: content
   langcode:
     type: language_select
