manage toggle map added to events view.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -72,5 +72,6 @@ managedates:
 monthevents:
   js:
     js/managedates/monthevents.js: {}
+    js/events/toggle_map.js: {}
   dependencies:
       - core/jquery
