--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.event.field_argumentaires
     - field.field.node.event.field_date
     - field.field.node.event.field_document
+    - field.field.node.event.field_event_meeting_ensemble
     - field.field.node.event.field_event_type
     - field.field.node.event.field_home_slideshow
     - field.field.node.event.field_image
@@ -49,7 +50,7 @@ content:
     type: text_textfield
     region: content
   field_argumentaires:
-    weight: 13
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -94,6 +95,13 @@ content:
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
+  field_event_meeting_ensemble:
+    weight: 13
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_event_type:
     weight: 12
     settings: {  }
@@ -101,7 +109,7 @@ content:
     type: options_buttons
     region: content
   field_home_slideshow:
-    weight: 15
+    weight: 16
     settings:
       display_label: true
     third_party_settings: {  }
@@ -122,7 +130,7 @@ content:
       field_widget_display_settings: {  }
     third_party_settings: {  }
   field_inscription:
-    weight: 14
+    weight: 15
     settings:
       default_data: true
     third_party_settings: {  }
@@ -179,7 +187,7 @@ content:
     type: string_textfield
     region: content
   moderation_state:
-    weight: 16
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: moderation_state_default
