--- a/config/sync/block.block.cartepermanente.yml
+++ b/config/sync/block.block.cartepermanente.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "<front>\r\n/agenda"
+    pages: "<front>\r\n/agenda/20*"
     negate: false
     context_mapping: {  }
