--- a/config/sync/core.entity_view_display.node.event.full.yml
+++ b/config/sync/core.entity_view_display.node.event.full.yml
@@ -210,6 +210,7 @@ content:
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_event_meeting_ensemble: true
   field_home_slideshow: true
   field_release_date: true
   field_ville: true
