--- a/config/sync/views.view.articles.yml
+++ b/config/sync/views.view.articles.yml
@@ -361,6 +361,7 @@ display:
         style: false
         row: false
         footer: false
+        sorts: false
       filter_groups:
         operator: AND
         groups:
@@ -399,6 +400,22 @@ display:
             value: '<h3 class="page-header">Archives</h3> '
             format: full_html
           plugin_id: text
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
@@ -505,7 +522,7 @@ display:
           value:
             min: ''
             max: ''
-            value: '2018-07-01 00:00:00'
+            value: '2018-09-20 00:00:00'
             type: date
           group: 1
           exposed: false
@@ -543,11 +560,28 @@ display:
         filters: false
         filter_groups: false
         header: false
+        sorts: false
       filter_groups:
         operator: AND
         groups:
           1: AND
       header: {  }
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: node
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
