Confix exported to change baseline.

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,7 +1,7 @@
 uuid: ff89b6e5-e86f-442e-abcd-f200243ce796
 name: Ensemble!34
 mail: y.douenel@coopernet.fr
-slogan: 'Pour une gauche réunie'
+slogan: 'Pour une gauche réunie !'
 page:
   403: ''
   404: ''
