--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -6,11 +6,13 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.field_home_slideshow
     - field.field.node.article.field_image
+    - field.field.node.article.field_referencement
     - field.field.node.article.field_release_date
     - field.field.node.article.field_thematique
     - node.type.article
   module:
     - ds
+    - metatag
     - text
     - user
 third_party_settings:
@@ -61,6 +63,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: left
+  field_referencement:
+    weight: 3
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
   field_thematique:
     weight: 0
     label: inline
