--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.event.field_image
     - field.field.node.event.field_inscription
     - field.field.node.event.field_place
+    - field.field.node.event.field_referencement
     - field.field.node.event.field_release_date
     - field.field.node.event.field_ville
     - node.type.event
@@ -21,6 +22,7 @@ dependencies:
     - datetime
     - ds
     - geofield_map
+    - metatag
     - text
     - user
     - webform
@@ -227,6 +229,13 @@ content:
         markercluster_control: 0
       gmap_api_key: ''
     third_party_settings: {  }
+  field_referencement:
+    weight: 17
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
   field_ville:
     weight: 15
     label: above
