--- a/config/sync/image.style.large_landscape.yml
+++ b/config/sync/image.style.large_landscape.yml
@@ -1,17 +1,15 @@
 uuid: 0459af56-da8e-4904-b881-9b14cb35370b
 langcode: fr
 status: true
-dependencies:
-  config:
-    - crop.type.large_landsacape
-  module:
-    - crop
+dependencies: {  }
 name: large_landscape
 label: 'Paysage large 1200x737'
 effects:
-  5e44ef91-a28c-4238-8664-77b29a9ad241:
-    uuid: 5e44ef91-a28c-4238-8664-77b29a9ad241
-    id: crop_crop
-    weight: -10
+  0747277b-10d5-4f37-a42d-0a1d78d41994:
+    uuid: 0747277b-10d5-4f37-a42d-0a1d78d41994
+    id: image_scale_and_crop
+    weight: 1
     data:
-      crop_type: large_landsacape
+      width: 1200
+      height: 737
+      anchor: center-center
