Module aggregator enabled and added in bottom nav.

--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -24,6 +24,7 @@ permissions:
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'access workbench'
+  - 'administer news feeds'
   - 'administer nodes'
   - 'administer workflow'
   - 'create article content'
