--- a/config/sync/views.view.frontpage.yml
+++ b/config/sync/views.view.frontpage.yml
@@ -345,7 +345,7 @@ display:
   feed_1:
     display_plugin: feed
     id: feed_1
-    display_title: Flux
+    display_title: Feed
     position: 2
     display_options:
       sitename_title: true
