--- a/config/sync/views.view.taxonomy_term.yml
+++ b/config/sync/views.view.taxonomy_term.yml
@@ -256,7 +256,7 @@ display:
       tags: {  }
   feed_1:
     id: feed_1
-    display_title: Flux
+    display_title: Feed
     display_plugin: feed
     position: 2
     display_options:
