--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -27,6 +27,8 @@ permissions:
   - 'administer news feeds'
   - 'administer nodes'
   - 'administer workflow'
+  - 'bypass node access'
+  - 'create argumentaire content'
   - 'create article content'
   - 'create audio media'
   - 'create edition workflow_transition'
@@ -34,28 +36,51 @@ permissions:
   - 'create file media'
   - 'create image media'
   - 'create media'
+  - 'create newsletter_agenda content'
   - 'create page content'
   - 'create terms in tag_media'
   - 'create video_embed media'
+  - 'create webform content'
+  - 'delete any argumentaire content'
   - 'delete any article content'
   - 'delete any audio media'
   - 'delete any event content'
   - 'delete any file media'
   - 'delete any image media'
   - 'delete any media'
+  - 'delete any newsletter_agenda content'
+  - 'delete any page content'
   - 'delete any video_embed media'
+  - 'delete any webform content'
+  - 'delete argumentaire revisions'
+  - 'delete article revisions'
+  - 'delete event revisions'
   - 'delete media'
+  - 'delete newsletter_agenda revisions'
+  - 'delete own argumentaire content'
+  - 'delete own article content'
   - 'delete own audio media'
+  - 'delete own event content'
   - 'delete own file media'
   - 'delete own image media'
+  - 'delete own page content'
   - 'delete own video_embed media'
+  - 'delete own webform content'
+  - 'delete page revisions'
   - 'delete terms in tag_media'
   - 'delete terms in tags'
+  - 'delete webform revisions'
+  - 'edit any argumentaire content'
+  - 'edit any article content'
   - 'edit any audio media'
   - 'edit any event content'
   - 'edit any file media'
   - 'edit any image media'
+  - 'edit any newsletter_agenda content'
+  - 'edit any page content'
   - 'edit any video_embed media'
+  - 'edit any webform content'
+  - 'edit own argumentaire content'
   - 'edit own audio media'
   - 'edit own event content'
   - 'edit own file media'
