newsletter template added.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -75,3 +75,10 @@ monthevents:
     js/events/toggle_map.js: {}
   dependencies:
       - core/jquery
+
+newsletter:
+  js:
+    js/newsletter/newsletter.js: {}
+  dependencies:
+      - core/jquery
+      
